--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:label="@string/main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,10 +18,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeActivity"
-            android:process=":home"
+        <activity
+            android:name=".HomeActivity"
+            android:label="@string/home"
             android:launchMode="singleTop"
-            android:label="@string/home"/>
+            android:process=":home" />
+        <activity android:name=".Main2Activity"
+            android:label="@string/main2"
+            android:launchMode="singleTop"
+            android:process=":home" />
     </application>
 
 </manifest>
