--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.woaiqw.abmob"
+        applicationId "com.woaiqw.avatar"
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
@@ -21,5 +21,5 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation project(':bmob')
+    implementation project(':avatar')
 }
