--- a/avatar/src/main/AndroidManifest.xml
+++ b/avatar/src/main/AndroidManifest.xml
@@ -1,2 +1,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.woaiqw.avatar" />
+    package="com.woaiqw.avatar" >
+
+    <application android:allowBackup="true"
+        android:label="@string/avatar"
+        android:supportsRtl="true"
+        android:vmSafeMode="true">
+
+        <service android:name=".service.ShadowService">
+            <intent-filter>
+                <action android:name="com.woaiqw.avatar.IAvatarAidlInterface" />
+            </intent-filter>
+        </service>
+
+    </application>
+
+
+</manifest>
