--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation project(':avatar')
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 }
