--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/main"
-            android:process=":main">
+            android:process=":main"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,7 +26,7 @@
         <activity
             android:name=".HomeActivity"
             android:label="@string/home"
-
+            android:process=":main"
             android:launchMode="singleTop" />
     </application>
 
