--- a/avatar/build.gradle
+++ b/avatar/build.gradle
@@ -22,4 +22,5 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
